RESOLVED FIXED188427
Yet more crashes in MobileSafari under -[WKFormInputSession setSuggestions:]
https://bugs.webkit.org/show_bug.cgi?id=188427
Summary Yet more crashes in MobileSafari under -[WKFormInputSession setSuggestions:]
Tim Horton
Reported 2018-08-08 18:40:57 PDT
Yet more crashes in MobileSafari under -[WKFormInputSession setSuggestions:]
Attachments
Patch (4.10 KB, patch)
2018-08-08 18:41 PDT, Tim Horton
wenson_hsieh: review+
Tim Horton
Comment 1 2018-08-08 18:41:19 PDT
Tim Horton
Comment 2 2018-08-08 18:41:21 PDT
Wenson Hsieh
Comment 3 2018-08-08 19:02:24 PDT
Comment on attachment 346809 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=346809&action=review > Source/WebKit/ChangeLog:15 > + Belt-and-suspenders fix: use ObjCWeakPtr for WKFormInputSession's WKContentView reference. ObjCWeakPtr => WeakObjCPtr
Tim Horton
Comment 4 2018-08-08 21:36:49 PDT
Note You need to log in before you can comment on or make changes to this bug.